--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>{{ page.title }}</title>
+    <title>EricHare.net - {{ page.title }}</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -34,10 +34,10 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Eric Hare</a>
+          <a class="navbar-brand" href="index.html">Eric Hare</a>
           <div class="nav-collapse collapse">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#">Home</a></li>
+              <li class="active"><a href="index.html">Home</a></li>
               <li><a href="#resume">Resume/CV</a></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects <b class="caret"></b></a>
@@ -50,7 +50,7 @@
               </li>
               <li><a href="#teaching">Teaching</a></li>
               <li><a href="#coursework">Classes</a></li>
-              <li><a href="#blog">Blog</a></li>
+              <li><a href="blog.html">Blog</a></li>
               <li><a href="#contact">Contact</a></li>
             </ul>
           </div><!--/.nav-collapse -->
@@ -60,9 +60,10 @@
       <!-- Begin page content -->
       <div class="container">
         <div class="page-header">
-          <h1>Welcome to Eric Hare's homepage</h1>
+          <h1>{{ page.title }}</h1>
         </div>
-      </div>
+        	{{ content }}
+        </div>
     </div>
 
     <div id="footer">
@@ -75,5 +76,19 @@
     ================================================== -->
     <script src="js/jquery-1.10.2.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script> 
+    	$(document).ready(function(){
+			var str=location.href.toLowerCase();
+			console.log(str);
+			$(".nav li a").each(function() {
+				console.log("Hi!");
+				if (str.indexOf(this.href.toLowerCase()) > -1) {
+ 					$("li.active").removeClass("active");
+					$(this).parent().addClass("active");
+				}
+			});
+ 		})
+
+    </script>
   </body>
 </html>
