--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,10 +15,10 @@
     <link href="css/sticky-footer-navbar.css" rel="stylesheet">
     
     <!-- syntax highlighting CSS -->
-    <link rel="stylesheet" href="/css/syntax.css">
+    <link rel="stylesheet" href="css/syntax.css">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="css/main.css">
   </head>
 
   <body>
