--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,10 +15,7 @@
     <link href="css/sticky-footer-navbar.css" rel="stylesheet">
     
     <!-- syntax highlighting CSS -->
-    <link rel="stylesheet" href="css/syntax.css">
-
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/main.css">
+    <link href="css/syntax.css" rel="stylesheet">
   </head>
 
   <body>
