--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,8 @@
 ---
 layout: default
-root: "../../../../"
+root: "../../../../../"
 ---
+
 <p class="meta">{{ page.date | date_to_string }}</p>
 
 <div class="post">
