Jekyll posts go in here too

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,7 +77,7 @@
     	$(document).ready(function(){
 			var str=location.href.toLowerCase();
 			$(".nav li a").each(function() {
-				if (str.indexOf(this.href.toLowerCase()) > -1) {
+				if (str.indexOf(this.href.toLowerCase()) > -1 || str.indexOf("jekyll") > -1) {
  					$("li.active").removeClass("active");
 					$(this).parent().addClass("active");
 				}
