--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,12 +77,12 @@
     	$(document).ready(function(){
 			var str=location.href.toLowerCase();
 			$(".nav li a").each(function() {
-				if (str.indexOf(this.href.toLowerCase()) > -1) {
- 					$("li.active").removeClass("active");
-					$(this).parent().addClass("active");
-				} else if (str.indexOf("jekyll") > -1) {
+				if (str.indexOf("jekyll") > -1) {
 				    $("li.active").removeClass("active");
 					$("li.jekyll").addClass("active");
+				} else if (str.indexOf(this.href.toLowerCase()) > -1) {
+ 					$("li.active").removeClass("active");
+					$(this).parent().addClass("active");
 				}
 			});
  		})
