Always set page.root!

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">Eric Hare</a>
+          <a class="navbar-brand" href="{{ page.root }}index.html">Eric Hare</a>
           <div class="nav-collapse collapse">
             <ul class="nav navbar-nav">
               <li class="active"><a href="{{ page.root }}index.html">Home</a></li>
