--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
               <li><a href="#teaching">Teaching</a></li>
               <li><a href="#coursework">Classes</a></li>
               <li class="jekyll"><a href="{{ page.root }}blog.html">Blog</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li><a href="contact.html">Contact</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
