--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="#">Pelica</a></li>
+                                    <li><a href="projects/pelica.html">Pelica</a></li>
                                     <li><a href="#">Forecast Analysis</a></li>
                                     <li><a href="#">Election 2012</a></li>
                                     <li><a href="#">Data Expo 2013</a></li>
