--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,9 +35,9 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="projects/pelica.html">Pelica</a></li>
-                                    <li><a href="#">Forecast Analysis</a></li>
-                                    <li><a href="#">Election 2012</a></li>
-                                    <li><a href="#">Data Expo 2013</a></li>
+                                    <li><a href="projects/forecast.html">Forecast Analysis</a></li>
+                                    <li><a href="http://harekaplan.github.io/election.html">Election 2012</a></li>
+                                    <li><a href="http://harekaplan.github.io/dataexpo.html">Data Expo 2013</a></li>
                                 </ul>
                             </li>
                             <li><a href="#teaching">Teaching</a></li>
