--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,8 +34,8 @@
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="projects/pelica.html">Pelica</a></li>
-                                    <li><a href="projects/forecast.html">Forecast Analysis</a></li>
+                                    <li><a href="{{ page.root }}projects/pelica.html">Pelica</a></li>
+                                    <li><a href="{{ page.root }}projects/forecast.html">Forecast Analysis</a></li>
                                     <li><a href="http://harekaplan.github.io/election.html">Election 2012</a></li>
                                     <li><a href="http://harekaplan.github.io/dataexpo.html">Data Expo 2013</a></li>
                                 </ul>
@@ -43,7 +43,7 @@
                             <li><a href="#teaching">Teaching</a></li>
                             <li><a href="#coursework">Classes</a></li>
                             <li class="jekyll"><a href="{{ page.root }}blog.html">Blog</a></li>
-                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="{{ page.root }}contact.html">Contact</a></li>
                         </ul>
                     </div>
                     <!--/.nav-collapse -->
