Teaching part of site

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
                                     <li><a href="http://harekaplan.github.io/dataexpo.html">Data Expo 2013</a></li>
                                 </ul>
                             </li>
-                            <li><a href="#teaching">Teaching</a></li>
+                            <li><a href="{{ page.root }}teaching.html">Teaching</a></li>
                             <li><a href="#coursework">Classes</a></li>
                             <li class="jekyll"><a href="{{ page.root }}blog.html">Blog</a></li>
                             <li><a href="{{ page.root }}contact.html">Contact</a></li>
