Classes taken now!

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
                                 </ul>
                             </li>
                             <li><a href="{{ page.root }}teaching.html">Teaching</a></li>
-                            <li><a href="#coursework">Classes</a></li>
+                            <li><a href="{{ page.root }}classes.html">Classes</a></li>
                             <li class="jekyll"><a href="{{ page.root }}blog.html">Blog</a></li>
                             <li><a href="{{ page.root }}contact.html">Contact</a></li>
                         </ul>
