Fix page root issue

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,49 +65,49 @@
                         </div>
                         <ul id="navigation">
                             <li class="currentmenu">
-                              <a href="index.html">
+                              <a href="{{ page.root }}index.html">
                                 <div class="icon icon-user"></div>
                                 <div class="text">About Me</div>
                               </a>
                             </li>
                             
                            <li>
-                              <a href="resume.pdf">
+                              <a href="{{ page.root }}resume.pdf">
                                   <div class="icon icon-download-alt"></div>
                                   <div class="text">Resume</div>
                               </a>
                             </li>
                             
                             <li>
-                              <a href="projects.html">
+                              <a href="{{ page.root }}projects.html">
                                 <div class="icon icon-book"></div>
                                 <div class="text">Projects</div>
                               </a>
                             </li> 
                             
                             <li>
-                              <a href="classes.html">
+                              <a href="{{ page.root }}classes.html">
                                 <div class="icon icon-edit"></div>
                                 <div class="text">Classes</div>
                               </a>
                             </li> 
 
                             <li>
-                              <a href="teaching.html">
+                              <a href="{{ page.root }}teaching.html">
                                 <div class="icon icon-time"></div>
                                 <div class="text">Teaching</div>
                               </a>
                             </li>
 
                             <li>
-                              <a href="blog.html">
+                              <a href="{{ page.root }}blog.html">
                                 <div class="icon icon-picture"></div>
                                 <div class="text">Blog</div>
                               </a>
                             </li>
 
                             <li>
-                              <a href="contact.html">
+                              <a href="{{ page.root }}contact.html">
                                   <div class="icon icon-calendar"></div>
                                   <div class="text">Contact</div>
                               </a>
