--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,49 +67,49 @@
                         {% assign current = page.url | downcase | split: '/' %}
                         
                         <ul id="navigation">
-                            <li {% if current[1] == 'index' %}class="currentmenu"{% endif %}>
+                            <li {% if current[1] == 'index.html' %}class="currentmenu"{% endif %}>
                               <a href="{{ page.root }}index.html">
                                 <div class="icon icon-user"></div>
                                 <div class="text">About Me</div>
                               </a>
                             </li>
                             
-                           <li {% if current[1] == 'resume' %}class="currentmenu"{% endif %}>
+                           <li {% if current[1] == 'resume.pdf' %}class="currentmenu"{% endif %}>
                               <a href="{{ page.root }}resume.pdf">
                                   <div class="icon icon-download-alt"></div>
                                   <div class="text">Resume</div>
                               </a>
                             </li>
                             
-                            <li {% if current[1] == 'projects' %}class="currentmenu"{% endif %}>
+                            <li {% if current[1] == 'projects.html' %}class="currentmenu"{% endif %}>
                               <a href="{{ page.root }}projects.html">
                                 <div class="icon icon-book"></div>
                                 <div class="text">Projects</div>
                               </a>
                             </li> 
                             
-                            <li {% if current[1] == 'classes' %}class="currentmenu"{% endif %}>
+                            <li {% if current[1] == 'classes.html' %}class="currentmenu"{% endif %}>
                               <a href="{{ page.root }}classes.html">
                                 <div class="icon icon-edit"></div>
                                 <div class="text">Classes</div>
                               </a>
                             </li> 
 
-                            <li {% if current[1] == 'teaching' %}class="currentmenu"{% endif %}>
+                            <li {% if current[1] == 'teaching.html' %}class="currentmenu"{% endif %}>
                               <a href="{{ page.root }}teaching.html">
                                 <div class="icon icon-time"></div>
                                 <div class="text">Teaching</div>
                               </a>
                             </li>
 
-                            <li {% if current[1] == 'blog' %}class="currentmenu"{% endif %}>
+                            <li {% if current[1] == 'blog.html' %}class="currentmenu"{% endif %}>
                               <a href="{{ page.root }}blog.html">
                                 <div class="icon icon-picture"></div>
                                 <div class="text">Blog</div>
                               </a>
                             </li>
 
-                            <li {% if current[1] == 'contact' %}class="currentmenu"{% endif %}>
+                            <li {% if current[1] == 'contact.html' %}class="currentmenu"{% endif %}>
                               <a href="{{ page.root }}contact.html">
                                   <div class="icon icon-calendar"></div>
                                   <div class="text">Contact</div>
