--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,8 +4,20 @@ root: "../../../../../"
 comments: true
 ---
 
-<p class="meta">{{ page.date | date_to_string }}</p>
+<div id="posts" class="page">
+	<div class="page-container">
+		<div class="pageheader">
+			<div class="headercontent">
+				<div class="section-container">
+										
+					<h2 class="meta">{{ page.date | date_to_string }}</h2>
 
-<div class="post">
-{{ content }}
+					<div class="post">
+					{{ content }}
+					</div>
+					
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
