--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,12 +4,19 @@ root: "../../../../../"
 comments: true
 ---
 
-<div id="posts" class="page">
-	<div class="page-container">
-		<p class="meta">{{ page.date | date_to_string }}</p>
+<div id="contact" class="page stellar">
+	<div class="pageheader">
+		<div class="headercontent">
+			<div class="section-container">
+				
+				<h2 class="title">{{page.title}}</h2>
+				<h3>{{ page.date | date_to_string }}</h3>
+							
+				<div class="post">
+					{{ content }}
+				</div>
 		
-		<div class="post">
-			{{ content }}
+			</div>
 		</div>
 	</div>
 </div>
