Click on my name to get back home

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,8 +58,8 @@
                         <div id="profile" class="clearfix">
                             <div class="portrate hidden-xs"></div>
                             <div class="title">
-                                <h2>Eric Hare</h2>
-                                <h3>Iowa State University</h3>
+                                <a href="index.html"><h2>Eric Hare</h2></a>
+                                <a href="index.html"><h3>Iowa State University</h3></a>
                             </div>
                             
                         </div>
