--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ root: "../../../../../"
 comments: true
 ---
 
-<div id="posts" class="page stellar">
+<div id="posts" class="page">
 	<div class="pageheader">
 		<div class="headercontent">
 			<div class="section-container">
