--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -121,9 +121,9 @@
                 
                 <div class="social-icons">
                     <ul>
-                        <li><a href="#"><i class="icon-facebook"></i></a></li>
-                        <li><a href="#"><i class="icon-twitter"></i></a></li>
-                        <li><a href="#"><i class="icon-linkedin"></i></a></li>
+                        <li><a href="http://www.facebook.com/erichare"><i class="icon-facebook"></i></a></li>
+                        <li><a href="http://www.twitter.com/Raftysworld"><i class="icon-twitter"></i></a></li>
+                        <li><a href="http://www.linkedin.com/profile/view?id=133389710"><i class="icon-linkedin"></i></a></li>
                     </ul>
                 </div>    
             </div>
