--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,8 @@
         <meta name="keywords" content="eric, hare, statistics, iowa, washington, computer, science" />
 
         <link rel="shortcut icon" href="../favicon.ico">
+        
+        <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
         <!--CSS styles-->
         <link rel="stylesheet" href="{{ page.root }}css/bootstrap.css">
