--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,10 +76,10 @@
                               </a>
                             </li>
                             
-                           <li {% if current[1] == 'resume.pdf' %}class="currentmenu"{% endif %}>
-                              <a href="{{ page.root }}resume.pdf">
+                           <li {% if current[1] == 'cv.pdf' %}class="currentmenu"{% endif %}>
+                              <a href="{{ page.root }}cv.pdf">
                                   <div class="icon icon-download-alt"></div>
-                                  <div class="text">Resume</div>
+                                  <div class="text">CV</div>
                               </a>
                             </li>
                             
