--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 
         <link rel="shortcut icon" href="../favicon.ico">
         
-        <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+        <script src="https://use.fontawesome.com/cb390d99b3.js"></script>
 
         <!--CSS styles-->
         <link rel="stylesheet" href="{{ page.root }}css/bootstrap.css">
@@ -45,6 +45,17 @@
 
         <script type="text/javascript" src="{{ page.root }}js/magnific-popup.js"></script>
         <script type="text/javascript" src="{{ page.root }}js/custom.js"></script>
+        
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        
+          ga('create', 'UA-38420239-3', 'auto');
+          ga('send', 'pageview');
+        
+        </script>
 
         <!--/Javascript files-->
 
@@ -118,7 +129,7 @@
                     <ul>
                         <li><a href="https://www.facebook.com/ericrhare"><i class="icon-facebook"></i></a></li>
                         <li><a href="https://www.twitter.com/ericrhare"><i class="icon-twitter"></i></a></li>
-                        <li><a href="http://www.linkedin.com/profile/view?id=133389710"><i class="icon-linkedin"></i></a></li>
+                        <li><a href="https://www.linkedin.com/profile/view?id=133389710"><i class="icon-linkedin"></i></a></li>
                     </ul>
                 </div>    
             </div>
@@ -133,24 +144,6 @@
                 {{ content }}
             </div>
         </div>
-        
-        <div id="footer">
-            <div class="container">
-                <p class="text-muted credit">Powered by <a href="http://pages.github.com">GitHub Pages</a></p>
-            </div>
-        </div>
-        
-        <script>
-  			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  			ga('create', 'UA-43236403-1', 'erichare.net');
-  			ga('send', 'pageview');
-
-		</script>
-            
                 
             </div>
         </div>
