Update js dependencies

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
         
         <script src="https://use.fontawesome.com/cb390d99b3.js"></script>
 
-        <!--CSS styles-->
+         <!--CSS styles-->
         <link rel="stylesheet" href="{{ page.root }}css/bootstrap.css">
         <link rel="stylesheet" href="{{ page.root }}css/font-awesome.min.css">  
         <link rel="stylesheet" href="{{ page.root }}css/perfect-scrollbar-0.4.5.min.css">
@@ -24,7 +24,7 @@
         
         <!--/CSS styles-->
         <!--Javascript files-->
-        <script type="text/javascript" src="{{ page.root }}js/jquery-1.10.2.js"></script>
+        <script type="text/javascript" src="{{ page.root }}js/jquery-1.11.3.min.js"></script>
         <script type="text/javascript" src="{{ page.root }}js/TweenMax.min.js"></script>
         <script type="text/javascript" src="{{ page.root }}js/jquery.touchSwipe.min.js"></script>
         <script type="text/javascript" src="{{ page.root }}js/jquery.carouFredSel-6.2.1-packed.js"></script>
@@ -32,7 +32,6 @@
         <script type="text/javascript" src="{{ page.root }}js/modernizr.custom.63321.js"></script>
         <script type="text/javascript" src="{{ page.root }}js/jquery.dropdownit.js"></script>
 
-        <script type="text/javascript" src="{{ page.root }}js/jquery.stellar.min.js"></script>
         <script type="text/javascript" src="{{ page.root }}js/ScrollToPlugin.min.js"></script>
 
         <script type="text/javascript" src="{{ page.root }}js/bootstrap.min.js"></script>
@@ -42,6 +41,8 @@
         <script type="text/javascript" src="{{ page.root }}js/masonry.min.js"></script>
 
         <script type="text/javascript" src="{{ page.root }}js/perfect-scrollbar-0.4.5.with-mousewheel.min.js"></script>
+        <script type="text/javascript" src="{{ page.root }}js/jquery.nicescroll.min.js"></script>
+
 
         <script type="text/javascript" src="{{ page.root }}js/magnific-popup.js"></script>
         <script type="text/javascript" src="{{ page.root }}js/custom.js"></script>
